--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "ViajaAi",
-    "slug": "ViajaAi",
+    "name": "Livraria Ai",
+    "slug": "Livraria Ai",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -16,12 +16,18 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/adaptive_icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.jaqueline_ads.ViajaAi"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "145c06e7-1d31-4c95-b033-7a47300a1728"
+      }
     }
   }
 }
